[sensors][win] Use angular velocity values for gyroscope sensor

This CL aligns implementation of gyroscope sensor with the
specification and uses angular velocity reading values instead
of angular acceleration. Unit tests updated to verify changes.

BUG=669765

Review-Url: https://codereview.chromium.org/2648423005
Cr-Commit-Position: refs/heads/master@{#445974}

Former-commit-id: 988f519584a682a2191c6ca72f91380f91d8166a