device/generic_sensor/generic_sensor_consts.h
@@ -13,8 +13,8 @@ namespace device {
 // Required for conversion from G/s^2 to m/s^2
 constexpr double kMeanGravity = 9.80665;
 
-// Required for conversion from deg/s^2 to rad/s^2
-constexpr double kRadiansInDegreesPerSecond = M_PI / 180.0;
+// Required for conversion from deg to rad
+constexpr double kRadiansInDegrees = M_PI / 180.0;
 
 // Required for conversion from Gauss to uT.
 constexpr double kMicroteslaInGauss = 100.0;
